--- a/package.json
+++ b/package.json
@@ -44,5 +44,17 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iheos/view.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/iheos/view/issues"
+  },
+  "homepage": "https://github.com/iheos/view#readme"
 }
