--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@vue/cli-plugin-eslint": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^5.15.2",
+    "eslint-plugin-vue": "^5.2.2",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
@@ -30,7 +30,10 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off",
+      "no-inline-comments": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
